--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# MONGO_URI = mongodb+srv://yetamnisha01:Yetamnisha%4001@cluster0.i6j0j.mongodb.net/codecollab-base?retryWrites=true&w=majority&appName=Cluster0
-MONGO_URI = mongodb://127.0.0.1:27017/codecollab-db
+MONGO_URI = mongodb+srv://yetamnisha01:Yetamnisha%4001@cluster0.i6j0j.mongodb.net/codecollab-base?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URI = mongodb://127.0.0.1:27017/codecollab-db
 
 PORT = 3002
 
